kubernetes/legacy/apps/mattermost/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mattermost
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "mattermost.k8s.local"
  rules:
    - backendRefs:
        - name: mattermost
          port: 8065
